feat: new cors-config