@@ -19,6 +19,9 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
+
+import org.springframework.beans.factory.annotation.Value;
 
 /**
  * Security configuration class for the application.
@@ -28,6 +31,11 @@ import java.util.Arrays;
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
+
+    // Reads the frontend URL from the environment variable (e.g. set on Railway).
+    // Falls back to localhost for local development.
+    @Value("${FRONTEND_URL:http://localhost:3000}")
+    private String frontendUrl;
 
     /**
      * Registers the JwtAuthenticationFilter as a Spring bean.
@@ -98,10 +106,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedOrigins(List.of(frontendUrl));                 // Reads from FRONTEND_URL env var
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true); // WICHTIG für Cookies!
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);                               // Required for JWT cookies
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
